# cmake-osx-demo

./: CMakeLists.txt  main.cpp
include/: foo.h  jni_main.h
src/: CMakeLists.txt  demo_jvm.cpp  foo.cpp  jni_main.cpp
